--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,24 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/store_automation
 spring.datasource.username = root
-spring.datasource.password = ll770186
+spring.datasource.password = Tiko0330
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+# logging level
+logging.level.org.springframework=INFO
+logging.level.com.mkyong=DEBUG
+
+# output to a file
+logging.file.name=app.log
+
+# temp folder example
+#logging.file=${java.io.tmpdir}/app.log
+
+logging.pattern.file = %d %p %c{1.} [%t] %m%n
+#Swagger
+#    http://localhost:8080/swagger-ui/index.html#/
+springdoc.api-docs.path = /bank
+spring.main.allow-circular-references = true
