--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ logging.file.name=app.log
 logging.pattern.file = %d %p %c{1.} [%t] %m%n
 #Swagger
 #    http://localhost:8080/swagger-ui/index.html#/
-springdoc.api-docs.path = /bank
+springdoc.api-docs.path = /Store-Automation
 spring.main.allow-circular-references = true
