--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/store_automation
-spring.datasource.username = root
-spring.datasource.password = ll770186
+spring.datasource.url = jdbc:mysql://localhost:3306/store_automation?useSSL=false&serverTimezone=UTC
+spring.datasource.username = gor
+spring.datasource.password = 1111
+server.port=8083
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
