--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,7 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/store_automation\
-spring.datasource.username = root
-spring.datasource.password = ll770186
-server.port=8080
+spring.datasource.url = jdbc:mysql://localhost:3306/store_automation
+spring.datasource.username = gor
+spring.datasource.password = 1111
+server.port=8083
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
@@ -23,3 +23,4 @@ logging.pattern.file = %d %p %c{1.} [%t] %m%n
 #    http://localhost:8080/swagger-ui/index.html#/
 springdoc.api-docs.path = /Store-Automation
 spring.main.allow-circular-references = true
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration,org.springframework.boot.autoconfigure.security.servlet.SecurityFilterAutoConfiguration,org.springframework.boot.autoconfigure.security.oauth2.client.servlet.OAuth2ClientAutoConfiguration
