--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/store_automation?useSSL=false&serverTimezone=UTC
-spring.datasource.username = gor
-spring.datasource.password = 1111
-server.port=8083
+spring.datasource.username = root
+spring.datasource.password = ll770186
+server.port=8080
 
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
@@ -23,3 +23,7 @@ logging.pattern.file = %d %p %c{1.} [%t] %m%n
 #    http://localhost:8080/swagger-ui/index.html#/
 springdoc.api-docs.path = /Store-Automation
 spring.main.allow-circular-references = true
+
+# Internationalization
+spring.messages.basename=i18n/messages
+spring.messages.encoding=UTF-8
