--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ build/
 
 src/main/resources/application.properties
 app.log
+src/main/resources/i18n
+src/main/resources/i18n/messages.properties
+src/main/resources/i18n/messages_ru.properties
+
+
+src/main/resources/i18n
+src/main/resources/i18n/messages.properties
+src/main/resources/i18n/messages_ru.properties
+
+
