--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/store_automation?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/store_automation
 spring.datasource.username = root
 spring.datasource.password = ll770186
 server.port=8080
